--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="header__logo">MoGo</div>
 
                 <nav class="nav">
-                    <a class="nav__link" href="#">About</a>
+                    <a class="nav__link active" href="#">About</a>
                     <a class="nav__link" href="#">Service</a>
                     <a class="nav__link" href="#">Work</a>
                     <a class="nav__link" href="#">Blog</a>
@@ -33,7 +33,68 @@
 
                 <a class="btn" href="#">Learn More</a>
             </div>
-        </div>
+
+            <div class="slider">
+                <div class="container">
+                    <div class="slider__inner">
+                        <div class="slider__item active">
+                            <span class="slider__num">01</span> 
+                            intro
+                        </div>
+                        <div class="slider__item">
+                            <span class="slider__num">02</span>  
+                            work
+                        </div>
+                        <div class="slider__item">
+                            <span class="slider__num">03</span>  
+                            about
+                        </div>
+                        <div class="slider__item">
+                            <span class="slider__num">04</span>  
+                            contacts
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!--/container-->
     </div>
+
+    <section class="section">
+        <div class="container">
+
+            <div class="section__header">
+                <h3 class="section__suptitle">What we do</h3>
+                <h2 class="section__title">Story about us</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo co</p>
+                </div>
+            </div>
+
+            <div class="about">
+                <div class="about__item">
+                    <div class="about__img">
+                        <img src="assets\images\about\1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="about__item">
+                    <div class="about__img">
+                        <img src="assets/images/about/2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="about__item">
+                    <div class="about__img">
+                        <img src="assets/images/about/3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+
+    
 </body>
 </html>
