--- a/index.html
+++ b/index.html
@@ -74,24 +74,127 @@
             </div>
 
             <div class="about">
-                <div class="about__item">
-                    <div class="about__img">
-                        <img src="assets\images\about\1.jpg" alt="">
+                <div class="about__inner">
+                    <div class="about__item">
+                        <div class="about__img">
+                            <img src="assets\images\about\1.jpg" alt="">
+                            <div class="about__text">
+                                super team
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="about__item">
+                        <div class="about__img">
+                            <img src="assets/images/about/2.jpg" alt="">
+                            <div class="about__text">
+                                super team
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about__item">
+                        <div class="about__img">
+                            <img src="assets/images/about/3.jpg" alt="">
+                            <div class="about__text">
+                                super team
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="about__item">
-                    <div class="about__img">
-                        <img src="assets/images/about/2.jpg" alt="">
+            </div>
+        </div>
+        <div class="statistics">
+            <div class="container">
+                <div class="stat__inner">
+                    <div class="stat__item">
+                        <div class="stat__num">42</div>
+                        <div class="stat__text">Web design projects</div>
                     </div>
-                </div>
-                <div class="about__item">
-                    <div class="about__img">
-                        <img src="assets/images/about/3.jpg" alt="">
+                    <div class="stat__item">
+                        <div class="stat__num">123</div>
+                        <div class="stat__text">happy client</div>
+                    </div>
+                    <div class="stat__item">
+                        <div class="stat__num">15</div>
+                        <div class="stat__text">award winner</div>
+                    </div>
+                    <div class="stat__item">
+                        <div class="stat__num">99</div>
+                        <div class="stat__text">cup of coffee</div>
+                    </div>
+                    <div class="stat__item">
+                        <div class="stat__num">24</div>
+                        <div class="stat__text">members</div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="section">
+        <div class="container">
+
+            <div class="section__header">
+                <h3 class="section__suptitle">We work with</h3>
+                <h2 class="section__title">Amazing Services</h2>
+            </div>
+
+            <div class="services">
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/1.png" alt="">
+                    </div>
+                    <div class="service__title">Photography</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/2.png" alt="">
+                    </div>
+                    <div class="service__title">Web design</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/3.png" alt="">
+                    </div>
+                    <div class="service__title">Creativity</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+            </div>
+
+            <div class="services">
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/4.png" alt="">
+                    </div>
+                    <div class="service__title">SEO</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/5.png" alt="">
+                    </div>
+                    <div class="service__title">CSS/HTML</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+                <div class="service__item">
+                    <div class="service__icon">
+                        <img src="assets/images/services/6.png" alt="">
+                    </div>
+                    <div class="service__title">Digital</div>
+                    <div class="service__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     
 
