--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/5fd5c795a7.js" crossorigin="anonymous"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoGo</title>
@@ -73,30 +74,36 @@
                 </div>
             </div>
 
-            <div class="about">
-                <div class="about__inner">
-                    <div class="about__item">
-                        <div class="about__img">
-                            <img src="assets\images\about\1.jpg" alt="">
-                            <div class="about__text">
-                                super team
+            <div class="cards">
+                <div class="cards__inner">
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets\images\about\1.jpg" alt="">
+                                <div class="cards__text">
+                                    super team
+                                </div>
                             </div>
                         </div>
                         
                     </div>
-                    <div class="about__item">
-                        <div class="about__img">
-                            <img src="assets/images/about/2.jpg" alt="">
-                            <div class="about__text">
-                                super team
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets/images/about/2.jpg" alt="">
+                                <div class="cards__text">
+                                    super team
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="about__item">
-                        <div class="about__img">
-                            <img src="assets/images/about/3.jpg" alt="">
-                            <div class="about__text">
-                                super team
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets/images/about/3.jpg" alt="">
+                                <div class="cards__text">
+                                    super team
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -234,7 +241,7 @@
 
             <div class="what_we_do">
                 <div class="what_we_do__item">
-                    <img src="http://placehold.it/570x380" alt="">
+                    <img src="assets/images/What_we_do_img.jpg" alt="">
                 </div>
                 <div class="what_we_do__item">
                     <div class="accordion__item accordion__item--active">
@@ -272,6 +279,123 @@
         </div>
     </section>
 
+    <div class="section section--gray">
+        <div class="container">
+            <div class="reviews">
+                <a class="reviews__btn reviews__btn--prev" href="#">Prev</a>
+                <a class="reviews__btn reviews__btn--next" href="#">Next</a>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="http://placehold.it/145" alt="">
+                    <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quasi doloremque minus officia quam qui fugiat animi tempora eos pariatur."</div>
+                    <div class="reviews__author">Jon Doe</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h3 class="section__suptitle">Who we are</h3>
+                <h2 class="section__title">meet our team</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo co</p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <div class="cards__inner">
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets\images\team\1.jpg" alt="">
+                                <div class="cards__text">
+                                    <div class="social">
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-pinterest-p"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cards__info">
+                            <div class="cards__name">matthew dix</div>
+                            <div class="cards__prof">Graphic Design</div>
+                        </div>
+                    </div>
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets/images/team/2.jpg" alt="">
+                                <div class="cards__text">
+                                    <div class="social">
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-pinterest-p"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="cards__info">
+                            <div class="cards__name">christopher campbell</div>
+                            <div class="cards__prof">Branding UX design</div>
+                        </div>
+                    </div>
+                    <div class="cards__item">
+                        <div class="cards__item__inner">
+                            <div class="cards__img">
+                                <img src="assets/images/team/3.jpg" alt="">
+                                <div class="cards__text">
+                                    <div class="social">
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-twitter"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-pinterest-p"></i>
+                                        </a>
+                                        <a class="social__item" href="#" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cards__info">
+                            <div class="cards__name">michael fertig</div>
+                            <div class="cards__prof">Developer</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     
