--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <a class="reviews__btn reviews__btn--next" href="#">Next</a>
 
                 <div class="reviews__item">
-                    <img class="reviews__photo" src="http://placehold.it/145" alt="">
+                    <img class="reviews__photo" src="assets/images/author_logo.png" alt="">
                     <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quasi doloremque minus officia quam qui fugiat animi tempora eos pariatur."</div>
                     <div class="reviews__author">Jon Doe</div>
                 </div>
@@ -396,6 +396,195 @@
             </div>
         </div>
     </section>
+
+    <div class="section section--gray">
+        <div class="container">
+            <div class="logos">
+                <div class="logos__item">
+                    <img src="assets/images/logos/1.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="assets/images/logos/2.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="assets/images/logos/3.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="assets/images/logos/4.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="assets/images/logos/5.png" alt="">
+                </div>
+                <div class="logos__item">
+                    <img src="assets/images/logos/6.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="section section--works">
+        <div class="container">
+            <div class="section__header">
+                <h3 class="section__suptitle">What we do</h3>
+                <h2 class="section__title">some of our work</h2>
+                <div class="section__text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo co</p>
+                </div>
+            </div>
+        </div>
+        <div class="works">
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/1.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/2.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/3.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/4.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/5.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works__col">
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/6.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works__item">
+                    <img class="works__item__img" src="assets/images/work/7.jpg" alt="">
+                    <div class="works__item__info">
+                        <div class="works__title">Creatively designed</div>
+                        <div class="works__text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="section">
+        <div class="container">
+            <div class="reviews">
+                <a class="reviews__btn reviews__btn--prev" href="#">Prev</a>
+                <a class="reviews__btn reviews__btn--next" href="#">Next</a>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="assets/images/author_logo.png" alt="">
+                    <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quasi doloremque minus officia quam qui fugiat animi tempora eos pariatur."</div>
+                    <div class="reviews__author">Joshua Earle</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="section section--cilents">
+        <div class="container">
+            <div class="section__header">
+                <h3 class="section__suptitle">Happy Clients</h3>
+                <h2 class="section__title">What people say</h2>
+            </div>
+
+            <div class="clients">
+                <div class="clients__item">
+                    <img class="clients__img" src="assets/images/clients/1.png" alt="">
+                    <div class="clients__info">
+                        <div class="clients__name">matthew dix</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae atque odio corrupti dolor, e</div>
+                    </div>
+                </div>
+                <div class="clients__item">
+                    <img class="clients__img" src="assets/images/clients/2.png" alt="">
+                    <div class="clients__info">
+                        <div class="clients__name">nick karvounis</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae atque odio corrupti dolor, e</div>
+                    </div>
+                </div>
+                <div class="clients__item">
+                    <img class="clients__img" src="assets/images/clients/3.png" alt="">
+                    <div class="clients__info">
+                        <div class="clients__name">jaelynn castillo</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae atque odio corrupti dolor, e</div>
+                    </div>
+                </div>
+                <div class="clients__item">
+                    <img class="clients__img" src="assets/images/clients/4.png" alt="">
+                    <div class="clients__info">
+                        <div class="clients__name">mike petrucci</div>
+                        <div class="clients__prof">Graphic Design</div>
+                        <div class="clients__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae atque odio corrupti dolor, e</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <div class="section__header">
+                <h3 class="section__suptitle">Our stories</h3>
+                <h2 class="section__title">Latest blog</h2>
+            </div>
+            <div class="blog">
+                <div class="blog__item">
+                    <div class="blog__header">
+                        <img class="blog__img" src="assets/images/blog/1.jpg" alt="">
+                        <div class="blog__date">
+                            <div>15</div>Jan
+                        </div>
+                    </div>
+                    <div class="blog__content">
+                        <div class="blog__title">Lorem ipsum dolor sit</div>
+                        <div class="blog__text">Consectetur adipisicing elit. Illum autem voluptate, hic ipsam voluptatum iste animi saepe labore</div>
+                    </div>
+                    <div class="blog__footer">
+                        <span>542</span>
+                        <span>17</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
 
 
     
